z-Index fix

--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -25,7 +25,7 @@ body {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: calc(100vh - 120px);
+    height: calc(100vh - 60px);
     scroll-snap-align: start;
     scroll-margin-top: 60px;
     @media only screen and (max-width: $smmd) {
@@ -94,7 +94,7 @@ a {
   position: fixed;
   top: 0;
   height: 60px;
-  z-index: 1;
+  z-index: 2;
   color: rgb(161, 51, 51);
   letter-spacing: 2px;
   font-weight: 600;
